# openflow

./: .gitignore  .gitmodules  Package.swift  README.md  default_config.json  install.sh
Sources/OpenFlow/: main.swift
assets/AppIcon.iconset/: Contents.json
experiments/: macos_context_probe.swift
scripts/: build_app.sh  install_app.sh
transcriber/: CMakeLists.txt
transcriber/scripts/: setup_whisper.sh
transcriber/scripts/patches/: whispercpp-arm-repack-neon-guard.patch
transcriber/transcription/: common-sdl.cpp  common-sdl.h  openflow_transcriber.cpp  stream.cpp  vad.cpp
